--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "chess.com",
   "version": "1.0.0",
   "main": "app.js",
-"scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start"
-},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js",
+    "start": "node app.js"
+  },
   "keywords": [
     "chess.com"
   ],
